# meshbbs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASING.md  build.rs  config.example.toml  config.old  test_node_cache.rs  topics.example.json
.github/workflows/: release.yml
docs/: README.md  _config.yml
docs/development/: fortune-module.md  releasing.md
docs/getting-started/: installation.md
docs/qa/: real-world-test-plan.md
docs/user-guide/: commands.md  games.md
packaging/runtime-skel/: .meshbbs_runtime_layout.README  config.example.toml
packaging/runtime-skel/data/: topics.json
protos/: README.md  meshbbs_placeholder.proto  meshtastic_placeholder.proto
scripts/: clean_workspace.sh
src/: lib.rs  logutil.rs  main.rs  metrics.rs  validation.rs
src/bbs/: commands.rs  dispatch.rs  eightball.rs  fortune.rs  mod.rs  public.rs  roles.rs  server.rs  session.rs  slotmachine.rs
src/config/: mod.rs
src/meshtastic/: framer.rs  mod.rs  slip.rs
src/protobuf/: mod.rs
src/storage/: mod.rs
test-data-int/: topics.json
test-data-int/messages/hello/: 0638ea05-b332-43de-adb5-13e96865b63b.json  071b2acd-dbd2-4e52-9e92-0f28baf4288e.json  099803e9-c686-4253-947b-8a29756f7679.json  0e4168d2-e82c-4ff8-8a49-f38b76d136bb.json  118d60f6-bb6b-46bc-8a22-e7e9038afc14.json  184e776c-7f97-4d59-9152-25199c849c14.json  1a09b827-4dc9-49d4-bb33-af4a85c34ffd.json  1b202e20-ba0c-48aa-91eb-f217764eaa55.json  1d2c6ad9-7db2-43d2-b900-93268cc30be9.json  2029399f-327d-4f69-9de3-c4e1fcc9f5c9.json  209dbecb-df77-427a-9074-e7c3ce651bbf.json  21386092-eed6-44ce-abbf-724d7b1feff8.json  23110483-c7b2-4d42-94b9-80e4af1fa0eb.json  28a70211-bf3a-45a5-a85f-c9df8b301e20.json  292fbf11-ec43-49a0-b5eb-8cf90856ef52.json  3033a587-3a98-4893-a4b8-80631ce3c34f.json  32a837d8-16b6-466b-a6e8-fe9c58ed5ea0.json  366f36e8-c1a7-42bd-83d9-1625bb4a6531.json  3d22764c%2Daa5d%2D4a6f%2Db266%2D3e6fbe845a6d.json  3f59637d-5f7f-4bcf-ba33-77c8d2d131f8.json  3feb73b2-4362-4a78-be8d-0d26ec6703b0.json  4372b7ae-ba48-43e6-9b4d-151aa1c9c2d2.json  48392b33-1db0-476c-a4e5-7b4e76121645.json  485f69fb-4c03-4bf6-a9ce-344dcb5efe42.json  4cc8ae87-647b-4073-be64-740ef933498f.json  4e04e01c-78f3-4b95-bde2-949a52ccff2c.json  4ec7c8a4%2D0fb1%2D46d4%2D8fff%2D505c514f9ba4.json  4f093e84-b29e-477d-b84c-42049f6d83db.json  5516cca4%2D4aaa%2D401d%2D8e43%2D63a2b283d037.json  55db44d6-4862-460a-a2b2-4ed1de908e96.json  56ba083c-c513-46d7-8fd3-3131af95b2d2.json  56cd479d-6b50-447c-a768-c65a9a2bb8f9.json  5a1f090a-ed7d-4bbf-bda6-e13087597f64.json  5b354f96-3b11-4bc9-9314-c6af737db5f6.json  5c2e90b3-e267-4f98-be31-b083713e65d4.json  (+55 more)
test-data-int/users/: alice.json  carol.json  tuh%5F06ad913a463e.json  tuh%5F0a15ecd270c2.json  tuh%5F0ab669a5d1d3.json  tuh%5F0c3c7f7dc50a.json  tuh%5F0e65dd6d7ad2.json  tuh%5F1e224574cd31.json  tuh%5F1ec12aca9a50.json  tuh%5F1fe2a74a5acf.json  tuh%5F235f6e8898f3.json  tuh%5F2a3ba159650a.json  tuh%5F2c584af999b1.json  tuh%5F34a8110c54ac.json  tuh%5F39e13c9e77f0.json  tuh%5F3b2b73348dc6.json  tuh%5F4456887eeb83.json  tuh%5F47a8c4f9f861.json  tuh%5F56d07b7246f8.json  tuh%5F5c67b6528220.json  tuh%5F61b110eb9e84.json  tuh%5F689e7b8c5a2b.json  tuh%5F6c4a370cc950.json  tuh%5F6ea174cbec77.json  tuh%5F801c220e358b.json  tuh%5F80b234d8ade1.json  tuh%5F8ad601545f5a.json  tuh%5F8ce20672b23a.json  tuh%5F9a0b95e9e923.json  tuh%5Fa47b134c3d3a.json  tuh%5Fa4e547ffeddd.json  tuh%5Faa536b504a24.json  tuh%5Fac54c436b1c6.json  tuh%5Facaace4d02df.json  tuh%5Fb5fa66d856ed.json  tuh%5Fbe4728078c73.json  tuh%5Fbe7a225c5dc8.json  tuh%5Fbf23b73b0530.json  tuh%5Fc149917315e4.json  tuh%5Fc1e5b5c619ca.json  (+60 more)
tests/: ack_handling.rs  admin_commands.rs  auth_password.rs  common.rs  compact_admin_shortcuts.rs  deletion_log.rs  dm_preempts_broadcast.rs  eightball_behavior.rs  first_dm_login.rs  first_help_no_banner.rs  flat_mode_ux.rs  fortune_behavior.rs  help_after_login.rs  help_broadcast_delay.rs  help_message_chunking.rs  help_public_commands.rs  help_roles.rs  help_single_letter.rs  integration_public_dm.rs  lock_persistence.rs  main_menu_aliases.rs  message_size.rs  mod_actions_compact.rs  moderation.rs  numbered_area_selection.rs  password_enforcement.rs  permissions.rs  prompt_states.rs  proto_send.rs  public_8ball.rs  public_fortune.rs  public_login_security.rs  public_no_shortcuts.rs  public_parser.rs  registration_chunking.rs  registration_length.rs  registration_no_invalid.rs  role_commands.rs  scheduler_overflow.rs  scheduler_unit.rs  (+12 more)
tests/test-data-int/: .gitignore  topics.json
(+133 files in other folders)
